Put Stuff in Seperate Files

--- a/SimpleBlazor/Components/Layout/MainLayout.razor
+++ b/SimpleBlazor/Components/Layout/MainLayout.razor
@@ -1,163 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
-<div id="PROGRAM" class="modal-wrapper-register">
-    <div class="modal-center">
-        <div data-w-id="7e9c1f15-23b3-3ba7-5e98-16a2e78f875a" class="modal-bg"></div>
-        <div class="modal-prg">
-            <div data-w-id="e1c0e7cb-7ac5-943e-c892-97d3088123d8" class="modal-exit">
-                <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/601b3ea11ec23d1ff4a513d2_exit-white.svg"
-                    loading="lazy" alt="" />
-            </div>
-            <div class="u-flex">
-                <div class="u-margin-bottom is--24">
-                    <h4 class="is--center">Try a Sketchy Program</h4>
-                    <p class="is--center">We &#x27;ll route you to create a free account with us</p>
-                </div>
-                <a href="/link-not-found/register"
-                    class="c-prg-btn is--med w-button">Medical</a>
-                <a href="#" class="c-prg-btn state--disabled w-button">MCAT COMING SOON</a>
-                <a href="#" class="c-prg-btn state--disabled w-button">PHARMACY COMING SOON</a>
-                <a href="#" class="c-prg-btn state--disabled w-button">PA COMING SOON</a>
-                <a href="/link-not-found/register"
-                    class="c-prg-btn is--nursing w-button">NURSING</a>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="LOGIN" class="modal-wrapper-login">
-    <div class="modal-center">
-        <div data-w-id="97835662-9b93-30f4-4aad-8d4f3074a2f3" class="modal-bg"></div>
-        <div class="modal-prg">
-            <div data-w-id="a2fd4254-410c-82fc-9fdf-a3245288c72e" class="modal-exit">
-                <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/601b3ea11ec23d1ff4a513d2_exit-white.svg"
-                    loading="lazy" alt="" />
-            </div>
-            <div class="u-flex">
-                <div class="u-margin-bottom is--24">
-                    <h4 class="is--center">Login to Siple Rule</h4>
-                    <p class="is--center">Choose the program you would like to login to</p>
-                </div>
-                <a href="/link-not-found/sign_in"
-                    class="c-prg-btn is--med w-button">Medical</a>
-                <a href="#" class="c-prg-btn state--disabled w-button">MCAT COMING SOON</a>
-                <a href="#" class="c-prg-btn state--disabled w-button">PHARMACY COMING SOON</a>
-                <a href="#" class="c-prg-btn state--disabled w-button">PA COMING SOON</a>
-                <a href="/link-not-found/sign_in"
-                    class="c-prg-btn is--nursing w-button">NURSING</a>
-            </div>
-        </div>
-    </div>
-</div>
-<div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner"
-    class="global-nav_collapsed w-nav">
-    <div class="w-container">
-        <a href="#" class="brand-2 w-nav-brand">
-            <img src="images/simple-ai-logo.svg" loading="lazy" height="28" alt="" class="image" />
-        </a>
-        <nav role="navigation" class="global-nav_dropdown_item w-nav-menu">
-            <div class="global-nav_section">MY SKETCHY</div>
-            <a href="#" data-w-id="ac7977d0-114d-d66f-eb7c-a8d2e481fd0e"
-                class="global-nav_dropdown_item modal-trigger w-nav-link">Log In</a>
-            <a href="#" data-w-id="ac7977d0-114d-d66f-eb7c-a8d2e481fd10"
-                class="c-primary-btn is--large modal-trigger w-button">TRY FOR FREE</a>
-            <div class="global-nav_section">EXPLORE</div>
-            <a href="/link-not-found/explore/medical-pre-clinical"
-                class="global-nav_dropdown_item w-nav-link">Medical Pre-Clinical</a>
-            <a href="/link-not-found/explore/medical-clinical"
-                class="global-nav_dropdown_item w-nav-link">Medical Clinical</a>
-            <a href="/link-not-found/explore/mcat"
-                class="global-nav_dropdown_item w-nav-link">MCAT</a>
-            <a href="/link-not-found/explore/pa"
-                class="global-nav_dropdown_item w-nav-link">PA</a>
-            <a href="/link-not-found/pharmacy"
-                class="global-nav_dropdown_item w-nav-link">Pharmacy</a>
-            <a href="/link-not-found/explore/nursing" target="_blank"
-                class="global-nav_dropdown_item w-nav-link">Nursing</a>
-            <div class="global-nav_section">SHOP</div>
-            <a href="/link-not-found/simple_rule_workbooks"
-                target="_blank" class="global-nav_dropdown_item w-nav-link">Workbooks</a>
-            <a href="/link-not-found/simple_rule_shirts"
-                target="_blank" class="global-nav_dropdown_item w-nav-link">Apparel</a>
-        </nav>
-        <div class="menu-button w-clearfix w-nav-button">
-            <div class="global-nav_hamburger w-icon-nav-menu"></div>
-        </div>
-    </div>
-</div>
-<div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="global-nav w-nav">
-    <div class="global-nav-bar">
-        <div class="w-clearfix">
-            <a href="https://www.simplerule.co/" aria-current="page" class="brand-2 w-nav-brand w--current">
-                <img src="images/simple-ai-logo.svg" loading="lazy" height="28" alt="" class="image" />
-            </a>
-            <nav role="navigation" class="global-nav-left w-nav-menu">
-                <div data-hover="1" data-delay="0" class="dropdown w-dropdown">
-                    <div class="global-nav__dropdown w-dropdown-toggle">
-                        <div class="w-icon-dropdown-toggle"></div>
-                        <div class="nav-dropdown__text">EXPLORE</div>
-                    </div>
-                    <nav class="dropdown-list w-dropdown-list">
-                        <div class="u-flex is--hor align--top justify--left">
-                            <div>
-                                <div class="global-nav_section">WIRELESS PLANS</div>
-                                <a href="/link-not-found/one_dollar_sim_card"
-                                    class="global-nav_dropdown_item w-dropdown-link">$1 Simple Sim Card</a>
-                                <a href="/link-not-found/five_dollars_month"
-                                    class="global-nav_dropdown_item w-dropdown-link">$5 / Month &nbsp;</a>
-                                <a href="/link-not-found/ten_dollars_month"
-                                    class="global-nav_dropdown_item w-dropdown-link">$10 / Month</a>
-                                <a href="/link-not-found/fifteen_dollars_month"
-                                    class="global-nav_dropdown_item w-dropdown-link">$15 / Month</a>
-                                <a href="/link-not-found/thirty_dollars_month"
-                                    class="global-nav_dropdown_item w-dropdown-link">$30 / Month</a>
-                                 <a href="/link-not-found/build_your_own_plan"
-                                    class="global-nav_dropdown_item w-dropdown-link">Build Your Own!</a>    
-                            </div>
-                            <div>
-                                <div class="global-nav_section">CONCIERGE</div>
-                                <a href="/link-not-found/just_text_basic"
-                                    class="global-nav_dropdown_item w-dropdown-link">Just Text</a>
-                                <a href="/link-not-found/text_and_images_vip"
-                                    class="global-nav_dropdown_item w-dropdown-link">Send An Image</a>
-                                <a href="/link-not-found/WhatsApp"
-                                    class="global-nav_dropdown_item w-dropdown-link">WhatsApp</a>
-                                <a href="/link-not-found/photo_email"
-                                    class="global-nav_dropdown_item w-dropdown-link">Photo Email</a>
-                                <a href="/link-not-found/business_tools"
-                                    class="global-nav_dropdown_item w-dropdown-link">Business Tools</a>
-                                <a href="/link-not-found/auto_concierge_plus"
-                                    class="global-nav_dropdown_item w-dropdown-link">Auto-Concierge Plus</a>
-                            </div>
-                        </div>
-                    </nav>
-                </div>
-                <div data-hover="1" data-delay="0" class="w-dropdown">
-                    <div class="global-nav__dropdown w-dropdown-toggle">
-                        <div class="w-icon-dropdown-toggle"></div>
-                        <div class="nav-dropdown__text">PHONES</div>
-                    </div>
-                    <nav class="dropdown-list w-dropdown-list">
-                        <div class="global-nav_section">SHOP</div>
-                        <a href="/link-not-found/buy_light_phone_II"
-                            target="_blank" class="global-nav_dropdown_item w-dropdown-link">Light Phone II</a>
-                        <a href="/link-not-found/buy_light_phone_III"
-                            target="_blank" class="global-nav_dropdown_item w-dropdown-link">Light Phone III</a>
-                        <a href="/link-not-found/buy_Simple_Rule_apparel"
-                            target="_blank" class="global-nav_dropdown_item w-dropdown-link">Simple Rule Apparel</a>
-                    </nav>
-                </div>
-            </nav>
-            <nav role="navigation" class="global-nav-right w-nav-menu">
-                <a data-w-id="b24e9a27-7e5a-9df8-012f-b9b8ff49d6e6" href="#"
-                    class="global-nav-link modal-trigger w-inline-block">
-                    <div>LOG IN</div>
-                </a>
-                <a href="#" data-w-id="b24e9a27-7e5a-9df8-012f-b9b8ff49d6e9"
-                    class="global-nav-btn modal-trigger w-button">TRY FOR FREE</a>
-            </nav>
-        </div>
-    </div>
-</div>
+<ModalWrapperRegister/>
+<ModalWrapperLogin/>
+
+<NavBarMobile/>
+<NavBarDesktop/>
 
 @Body
 
