--- a/SimpleBlazor/Components/JustTextBasic.razor
+++ b/SimpleBlazor/Components/JustTextBasic.razor
@@ -32,7 +32,7 @@
                     <!-- Enter Phone Number Here -->
                     <a id="w-node-_2ca56d40-3a41-48dc-f69c-ef599d404baf-b006e859"
                         href="/link-not-found/explore_just_text_basic"
-                        class="c-primary-btn is--large is--med w-button">LEARN MORE
+                        target="_blank" class="c-primary-btn is--large is--med w-button">LEARN MORE
                         + PRICING</a>
                 </div>
             </div>
