--- a/SimpleBlazor/Components/MainContentSelector.razor
+++ b/SimpleBlazor/Components/MainContentSelector.razor
@@ -133,7 +133,7 @@
                 <div class="w-layout-grid c-program_stats_02">
                     <!-- Enter Phone Number Here -->
                     <a href="/web/20210504080548/https://www.sketchy.com/explore/mcat"
-                        class="c-primary-btn is--large is--mcat w-button">LEARN MORE</a>
+                        target="_blank" class="c-primary-btn is--large is--mcat w-button">LEARN MORE</a>
                 </div>
             </div>
         </div>
@@ -200,7 +200,7 @@
                     <div class="w-layout-grid c-program_stats_02">
                         <!-- Enter Phone Number Here -->
                         <a href="/web/20210504080548/https://www.sketchy.com/explore/pa"
-                            class="c-primary-btn is--large is--pa w-button">LEARN MORE</a>
+                            target="_blank" class="c-primary-btn is--large is--pa w-button">LEARN MORE</a>
                     </div>
                 </div>
             </div>
