--- a/SimpleBlazor/Components/NavBarDesktop.razor
+++ b/SimpleBlazor/Components/NavBarDesktop.razor
@@ -15,32 +15,32 @@
                             <div>
                                 <div class="global-nav_section">WIRELESS PLANS</div>
                                 <a href="/link-not-found/one_dollar_sim_card"
-                                    class="global-nav_dropdown_item w-dropdown-link">$1 Simple Sim Card</a>
+                                    target="_blank" class="global-nav_dropdown_item w-dropdown-link">$1 Simple Sim Card</a>
                                 <a href="/link-not-found/five_dollars_month"
-                                    class="global-nav_dropdown_item w-dropdown-link">$5 / Month &nbsp;</a>
+                                    target="_blank" class="global-nav_dropdown_item w-dropdown-link">$5 / Month &nbsp;</a>
                                 <a href="/link-not-found/ten_dollars_month"
-                                    class="global-nav_dropdown_item w-dropdown-link">$10 / Month</a>
+                                    target="_blank" class="global-nav_dropdown_item w-dropdown-link">$10 / Month</a>
                                 <a href="/link-not-found/fifteen_dollars_month"
-                                    class="global-nav_dropdown_item w-dropdown-link">$15 / Month</a>
+                                    target="_blank" class="global-nav_dropdown_item w-dropdown-link">$15 / Month</a>
                                 <a href="/link-not-found/thirty_dollars_month"
-                                    class="global-nav_dropdown_item w-dropdown-link">$30 / Month</a>
+                                    target="_blank" class="global-nav_dropdown_item w-dropdown-link">$30 / Month</a>
                                  <a href="/link-not-found/build_your_own_plan"
-                                    class="global-nav_dropdown_item w-dropdown-link">Build Your Own!</a>    
+                                    target="_blank" class="global-nav_dropdown_item w-dropdown-link">Build Your Own!</a>    
                             </div>
                             <div>
                                 <div class="global-nav_section">CONCIERGE</div>
                                 <a href="/link-not-found/just_text_basic"
-                                    class="global-nav_dropdown_item w-dropdown-link">Just Text</a>
+                                    target="_blank" class="global-nav_dropdown_item w-dropdown-link">Just Text</a>
                                 <a href="/link-not-found/text_and_images_vip"
-                                    class="global-nav_dropdown_item w-dropdown-link">Send An Image</a>
+                                    target="_blank" class="global-nav_dropdown_item w-dropdown-link">Send An Image</a>
                                 <a href="/link-not-found/WhatsApp"
-                                    class="global-nav_dropdown_item w-dropdown-link">WhatsApp</a>
+                                    target="_blank" class="global-nav_dropdown_item w-dropdown-link">WhatsApp</a>
                                 <a href="/link-not-found/photo_email"
-                                    class="global-nav_dropdown_item w-dropdown-link">Photo Email</a>
+                                    target="_blank" class="global-nav_dropdown_item w-dropdown-link">Photo Email</a>
                                 <a href="/link-not-found/business_tools"
-                                    class="global-nav_dropdown_item w-dropdown-link">Business Tools</a>
+                                    target="_blank" class="global-nav_dropdown_item w-dropdown-link">Business Tools</a>
                                 <a href="/link-not-found/auto_concierge_plus"
-                                    class="global-nav_dropdown_item w-dropdown-link">Auto-Concierge Plus</a>
+                                    target="_blank" class="global-nav_dropdown_item w-dropdown-link">Auto-Concierge Plus</a>
                             </div>
                         </div>
                     </nav>
