--- a/SimpleBlazor/Components/GlobalFooter.razor
+++ b/SimpleBlazor/Components/GlobalFooter.razor
@@ -5,31 +5,31 @@
                 <h6>
                     <span class="u-text-color is--black">Programs</span>
                 </h6>
-                <a href="/link-not-found/Simple_Rule_AI" class="global-footer-link">Simple Rule AI</a>
-                <a href="/link-not-found/Simple_WhatsApp" class="global-footer-link">WhatsApp</a>
-                <a href="/link-not-found/Simple_Google_Maps" class="global-footer-link">Maps</a>
-                <a href="/link-not-found/Simple_Business" class="global-footer-link">Business Tools</a>
-                <a href="/link-not-found/Simple_Timer" class="global-footer-link">Weather</a>
-                <a href="/link-not-found/Simple_Photo_Emailer" class="global-footer-link">Photo Email</a>
+                <a href="/link-not-found/Simple_Rule_AI" target="_blank" class="global-footer-link">Simple Rule AI</a>
+                <a href="/link-not-found/Simple_WhatsApp" target="_blank" class="global-footer-link">WhatsApp</a>
+                <a href="/link-not-found/Simple_Google_Maps" target="_blank" class="global-footer-link">Maps</a>
+                <a href="/link-not-found/Simple_Business" target="_blank" class="global-footer-link">Business Tools</a>
+                <a href="/link-not-found/Simple_Timer" target="_blank" class="global-footer-link">Weather</a>
+                <a href="/link-not-found/Simple_Photo_Emailer" target="_blank" class="global-footer-link">Photo Email</a>
             </div>
             <div>
                 <h6>
                     <span class="u-text-color is--black">Support</span>
                 </h6>
-                <a href="/link-not-found/Account" class="global-footer-link">Account</a>
-                <a href="/link-not-found/Billing" class="global-footer-link">Billing</a>
+                <a href="/link-not-found/Account" target="_blank" class="global-footer-link">Account</a>
+                <a href="/link-not-found/Billing" target="_blank" class="global-footer-link">Billing</a>
                 <a href="https://forms.gle/KuewJ2PxgjD8jKgB9" target="_blank" rel="noopener noreferrer"
                     class="global-footer-link">Manage Subscription</a>
-                <a href="/link-not-found/Businesses" class="global-footer-link">Businessesgit</a>
-                <a href="/link-not-found/Contact Us" class="global-footer-link">Contact Us</a>
+                <a href="/link-not-found/Businesses" target="_blank" class="global-footer-link">Businessesgit</a>
+                <a href="/link-not-found/Contact Us" target="_blank" class="global-footer-link">Contact Us</a>
             </div>
             <div id="w-node-_4099f47b-6fda-bd45-89a8-b604e38abb33-e38abb1a">
                 <h6>
                     <span class="u-text-color is--black">About Us</span>
                 </h6>
-                <a href="/link-not-found/Company" class="global-footer-link">Company</a>
+                <a href="/link-not-found/Company" target="_blank" class="global-footer-link">Company</a>
                 <a href="/link-not-found/Careers" target="_blank" class="global-footer-link">Careers</a>
-                <a href="/link-not-found/Equity" class="global-footer-link">Freedom &amp; Focus</a>
+                <a href="/link-not-found/Equity" target="_blank" class="global-footer-link">Freedom &amp; Focus</a>
             </div>
         </div>
         <div class="divider"></div>
