--- a/SimpleBlazor/Components/NavBarMobile.razor
+++ b/SimpleBlazor/Components/NavBarMobile.razor
@@ -12,15 +12,15 @@
                 class="c-primary-btn is--large modal-trigger w-button">TRY FOR FREE</a>
             <div class="global-nav_section">EXPLORE</div>
             <a href="/link-not-found/explore/medical-pre-clinical"
-                class="global-nav_dropdown_item w-nav-link">Medical Pre-Clinical</a>
+                target="_blank" class="global-nav_dropdown_item w-nav-link">Medical Pre-Clinical</a>
             <a href="/link-not-found/explore/medical-clinical"
-                class="global-nav_dropdown_item w-nav-link">Medical Clinical</a>
+                target="_blank" class="global-nav_dropdown_item w-nav-link">Medical Clinical</a>
             <a href="/link-not-found/explore/mcat"
-                class="global-nav_dropdown_item w-nav-link">MCAT</a>
+                target="_blank" class="global-nav_dropdown_item w-nav-link">MCAT</a>
             <a href="/link-not-found/explore/pa"
-                class="global-nav_dropdown_item w-nav-link">PA</a>
+                target="_blank" class="global-nav_dropdown_item w-nav-link">PA</a>
             <a href="/link-not-found/pharmacy"
-                class="global-nav_dropdown_item w-nav-link">Pharmacy</a>
+                target="_blank" class="global-nav_dropdown_item w-nav-link">Pharmacy</a>
             <a href="/link-not-found/explore/nursing" target="_blank"
                 class="global-nav_dropdown_item w-nav-link">Nursing</a>
             <div class="global-nav_section">SHOP</div>
