--- a/SimpleBlazor/Components/MainContentSelector.razor
+++ b/SimpleBlazor/Components/MainContentSelector.razor
@@ -81,62 +81,45 @@
                     loading="eager" width="250" alt="" />
             </div>
             <div class="u-flex is--ver">
-                <h3 class="c-program_course">MCAT</h3>
+                <h3 class="c-program_course">Light Phone + Simple Rule</h3>
                 <h5>
-                    <span class="badge-large is--black">COMING SOON</span>
+                    <span class="badge-large is--black">COMING SOON</span>
                 </h5>
                 <div class="u-flex">
                     <div class="c-email_collection">
                         <h4>
-                            Get a promo code when we launch Sketchy MCAT<span class="copyright">®</span>
+                            Save hours every week with SMS-based AI assistance built for Light Phone users
                         </h4>
-                        <div class="u-padding-y is--32 w-embed w-script">
-
-                            <script charset="utf-8" type="text/javascript"
-                                src="//web.archive.org/web/20210504080548js_/https://js.hsforms.net/forms/v2.js"></script>
-                            <script>
-                                hbspt.forms.create({
-                                    portalId: "9337792",
-                                    formId: "b024c496-bf16-4fcf-ac9e-b5ff0091d2dc"
-                                });
-                            </script>
-                        </div>
-                        <p class="is--center">Click &quot;Submit &quot;to opt-in to receiving emails about
-                            Sketchy MCAT</p>
-                    </div>
                 </div>
                 <div class="w-layout-grid c-program_features">
                     <div id="w-node-efb48404-047e-a068-6c45-3813a55e568a-b006e859" class="c-program_feature">
                         <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/60301e3e5ee8ea4c2e15b9d0_trophy-1-black.svg"
                             loading="lazy" height="56" alt="" class="c-program_image" />
-                        <p class="c-program_caption">Score higher on the MCAT with less effort and more fun</p>
+                        <p class="c-program_caption">Reclaim up to 3 hours per day by simplifying your digital life</p>
                     </div>
                     <div id="w-node-efb48404-047e-a068-6c45-3813a55e568e-b006e859" class="c-program_feature">
                         <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/60300e16654ebd8929b65701_calendar-black.svg"
                             loading="lazy" height="56" alt="" class="c-program_image" />
-                        <p class="c-program_caption">New MCAT Program just in time for 2021 MCAT Testing Dates
-                        </p>
+                        <p class="c-program_caption">Focus on what matters most with less screen time</p>
                     </div>
                     <div id="w-node-efb48404-047e-a068-6c45-3813a55e5692-b006e859" class="c-program_feature">
                         <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/60301e3e5c2591e74cadad50_atom-black.svg"
                             loading="lazy" height="56" alt="" class="c-program_image" />
-                        <p class="c-program_caption">Includes lessons on high-yield MCAT content from
-                            Biochemistry and Biology — other MCAT sciences on the way</p>
+                        <p class="c-program_caption">Access AI-driven insights for tasks, reminders, and quick queries</p>
                     </div>
                     <div id="w-node-efb48404-047e-a068-6c45-3813a55e5696-b006e859" class="c-program_feature">
                         <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/60301e3db7b842782839eea5_cycle-black.svg"
                             loading="lazy" height="56" alt="" class="c-program_image" />
-                        <p class="c-program_caption">Continuous content updates through spring and summer 2021,
-                            including Chemistry, Physics, Psychology/Sociology, and more</p>
+                        <p class="c-program_caption">Seamless integration with Light Phone for a distraction-free experience</p>
                     </div>
                 </div>
                 <div class="w-layout-grid c-program_stats_02">
-                    <!-- Enter Phone Number Here -->
                     <a href="/web/20210504080548/https://www.sketchy.com/explore/mcat"
                         target="_blank" class="c-primary-btn is--large is--mcat w-button">LEARN MORE</a>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <div data-w-tab="PA" class=@paClass>
