Improved Layout of Tabs, still broken 1st tab SVG

--- a/SimpleBlazor/Components/MainContentSelector.razor
+++ b/SimpleBlazor/Components/MainContentSelector.razor
@@ -30,6 +30,7 @@
                 <div>Economical</div>
             </a>
         </div>
+        
         <div class="u-background-light-blue w-tab-content">
             <div data-w-tab="Medical" class=@medicalClass>
                 <div data-w-id="Div Block 4" class="position-relative">
@@ -51,76 +52,21 @@
                             }
                             else
                             {
-                                <TextAndImagesVip />
+                                <TextAndImagesVip/>
                             }
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="svg-home_001">
+                <img src="images/dotted-line-blue.svg" loading="eager" width="700" alt="" />
+            </div>
+            <div class="svg-home_002">
+                <img src="images/pluses-07-blue.svg" loading="eager" width="550" alt="" />
+            </div>
 
             <div data-w-tab="MCAT" class=@mcatClass>
-                <div class="u-padding-y is--32 w-container">
-                    <div data-w-id="Div Block 22" class="position-relative">
-                        <div class="svg-home_025">
-                            <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/602b4f9de258539de2ffeb65_curved-arrow.svg"
-                                loading="eager" alt="" />
-                        </div>
-                        <div class="svg-home_026">
-                            <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/602b4f9ec40a3d2d932bd30e_stars-teal.svg"
-                                loading="eager" width="250" alt="" />
-                        </div>
-                        <div class="u-flex is--ver">
-                            <h3 class="c-program_course">Light Phone + Simple Rule</h3>
-                            <h5>
-                                <span class="badge-large is--black">COMING SOON</span>
-                            </h5>
-                            <div class="u-flex">
-                                <div class="c-email_collection">
-                                    <h4>
-                                        Save hours every week with SMS-based AI assistance built for Light Phone users
-                                    </h4>
-                                </div>
-                                <div class="w-layout-grid c-program_features">
-                                    <div id="w-node-efb48404-047e-a068-6c45-3813a55e568a-b006e859"
-                                        class="c-program_feature">
-                                        <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/60301e3e5ee8ea4c2e15b9d0_trophy-1-black.svg"
-                                            loading="lazy" height="56" alt="" class="c-program_image" />
-                                        <p class="c-program_caption">Reclaim up to 3 hours per day by simplifying your
-                                            digital life
-                                        </p>
-                                    </div>
-                                    <div id="w-node-efb48404-047e-a068-6c45-3813a55e568e-b006e859"
-                                        class="c-program_feature">
-                                        <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/60300e16654ebd8929b65701_calendar-black.svg"
-                                            loading="lazy" height="56" alt="" class="c-program_image" />
-                                        <p class="c-program_caption">Focus on what matters most with less screen time
-                                        </p>
-                                    </div>
-                                    <div id="w-node-efb48404-047e-a068-6c45-3813a55e5692-b006e859"
-                                        class="c-program_feature">
-                                        <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/60301e3e5c2591e74cadad50_atom-black.svg"
-                                            loading="lazy" height="56" alt="" class="c-program_image" />
-                                        <p class="c-program_caption">Access AI-driven insights for tasks, reminders, and
-                                            quick
-                                            queries</p>
-                                    </div>
-                                    <div id="w-node-efb48404-047e-a068-6c45-3813a55e5696-b006e859"
-                                        class="c-program_feature">
-                                        <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/60301e3db7b842782839eea5_cycle-black.svg"
-                                            loading="lazy" height="56" alt="" class="c-program_image" />
-                                        <p class="c-program_caption">Seamless integration with Light Phone for a
-                                            distraction-free
-                                            experience</p>
-                                    </div>
-                                </div>
-                                <div class="w-layout-grid c-program_stats_02">
-                                    <a href="/web/20210504080548/https://www.sketchy.com/explore/mcat" target="_blank"
-                                        class="c-primary-btn is--large is--mcat w-button">LEARN MORE</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+               <Mcat/>
             </div>
 
             <div data-w-tab="PA" class=@paClass>
@@ -320,12 +266,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="svg-home_001">
-                <img src="images/dotted-line-blue.svg" loading="eager" width="700" alt="" />
-            </div>
-            <div class="svg-home_002">
-                <img src="images/pluses-07-blue.svg" loading="eager" width="550" alt="" />
             </div>
         </div>
     </div>
