Moved code into folders

--- a/SimpleBlazor/Components/HomePage/EndingFreeTrialBanner.razor
+++ b/SimpleBlazor/Components/HomePage/EndingFreeTrialBanner.razor
@@ -1,3 +1,4 @@
+@namespace SimpleRuleBlazor.Components.HomePage
 <div class="u-background-light-blue">
     <div class="u-padding-y is--56 w-container">
         <div class="w-layout-grid c-freetrial-01">
