--- a/SimpleBlazor/Components/HomePage/Mcat.razor
+++ b/SimpleBlazor/Components/HomePage/Mcat.razor
@@ -1,3 +1,5 @@
+@namespace SimpleRuleBlazor.Components.HomePage
+
 <div class="u-padding-y is--32 w-container">
     <div data-w-id="Div Block 22" class="position-relative">
         <div class="svg-home_025">
