--- a/SimpleBlazor/Components/HomePage/TextAndImagesVip.razor
+++ b/SimpleBlazor/Components/HomePage/TextAndImagesVip.razor
@@ -1,3 +1,5 @@
+@namespace SimpleRuleBlazor.Components.HomePage
+
 <div class="w-tab-content">
     <div data-w-tab="Step 2" class="w-tab-pane w--tab-active">
         <div class="u-padding-y is--24">
