--- a/SimpleBlazor/Components/HomePage/TheDisconnectMovement.razor
+++ b/SimpleBlazor/Components/HomePage/TheDisconnectMovement.razor
@@ -1,3 +1,5 @@
+@namespace SimpleRuleBlazor.Components.HomePage
+
 <div class="u-background-blob">
     <div class="w-container">
         <div class="position-relative">
