--- a/SimpleBlazor/Components/HomePage/UserReviews.Razor
+++ b/SimpleBlazor/Components/HomePage/UserReviews.Razor
@@ -1,4 +1,6 @@
-<div class="owl-carousel owl-theme">
+@namespace SimpleRuleBlazor.Components.HomePage
+
+@* <div class="owl-carousel owl-theme">
     <div class="item">
         <div class="c-home_testimonial_entry">
             <img src="blue-quotes.svg" loading="lazy" alt="" class="u-padding_bottom is--24" />
@@ -74,4 +76,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> *@
