--- a/SimpleBlazor/Components/HomePage/WelcomeBanner.razor
+++ b/SimpleBlazor/Components/HomePage/WelcomeBanner.razor
@@ -1,3 +1,5 @@
+@namespace SimpleRuleBlazor.Components.HomePage
+
 <div class="home-hero-desktop">
     <div class="w-container">
         <div class="c-heroheader__top">
