--- a/SimpleBlazor/Components/Modals/ModalWrapperLogin.razor
+++ b/SimpleBlazor/Components/Modals/ModalWrapperLogin.razor
@@ -1,22 +1,24 @@
-<div id="PROGRAM" class="modal-wrapper-register">
+@namespace SimpleRuleBlazor.Components.Modals
+
+<div id="LOGIN" class="modal-wrapper-login">
     <div class="modal-center">
-        <div data-w-id="7e9c1f15-23b3-3ba7-5e98-16a2e78f875a" class="modal-bg"></div>
+        <div data-w-id="97835662-9b93-30f4-4aad-8d4f3074a2f3" class="modal-bg"></div>
         <div class="modal-prg">
-            <div data-w-id="e1c0e7cb-7ac5-943e-c892-97d3088123d8" class="modal-exit">
+            <div data-w-id="a2fd4254-410c-82fc-9fdf-a3245288c72e" class="modal-exit">
                 <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/601b3ea11ec23d1ff4a513d2_exit-white.svg"
                     loading="lazy" alt="" />
             </div>
             <div class="u-flex">
                 <div class="u-margin-bottom is--24">
-                    <h4 class="is--center">Try a Sketchy Program</h4>
-                    <p class="is--center">We &#x27;ll route you to create a free account with us</p>
+                    <h4 class="is--center">Login to Siple Rule</h4>
+                    <p class="is--center">Choose the program you would like to login to</p>
                 </div>
-                <a href="/link-not-found/register"
+                <a href="/link-not-found/sign_in"
                     class="c-prg-btn is--med w-button">Medical</a>
                 <a href="#" class="c-prg-btn state--disabled w-button">MCAT COMING SOON</a>
                 <a href="#" class="c-prg-btn state--disabled w-button">PHARMACY COMING SOON</a>
                 <a href="#" class="c-prg-btn state--disabled w-button">PA COMING SOON</a>
-                <a href="/link-not-found/register"
+                <a href="/link-not-found/sign_in"
                     class="c-prg-btn is--nursing w-button">NURSING</a>
             </div>
         </div>
