--- a/SimpleBlazor/Components/Pages/LinkNotFound.razor
+++ b/SimpleBlazor/Components/Pages/LinkNotFound.razor
@@ -1,17 +1,32 @@
-@page "/link-not-found/{linkName}"
+@page "/link-not-found/{linkName?}"
 
 @code {
     [Parameter]
-    public string linkName { get; set; }
+    public string? linkName { get; set; }
 
     protected override void OnInitialized()
     {
-        // Additional logic if needed
+        if (string.IsNullOrEmpty(linkName))
+        {
+            // Redirect to a default page or display an error
+            NavigationManager?.NavigateTo("/");
+        }
     }
+
+    [Inject]
+    private NavigationManager? NavigationManager { get; set; }
 }
+
 <div class="u-background-light-blue">
-    <h3> <br> <br> You clicked on '@linkName', but it isn't created yet. <br> <br> </h3>
-    <p>Please email <a href="mailto:simplerule.ai@gmail.com">brennanopitz@gmail.com</a> to request this link or page.
+    <h3>
+        <br><br>
+        You clicked on '@(string.IsNullOrEmpty(linkName) ? "an unknown link" : linkName)', but it isn't created yet.
+        <br><br>
+    </h3>
+    <p>
+        Please email <a href="mailto:brennanopitz@gmail.com">brennanopitz@gmail.com</a> to request this link or page.
     </p>
-    <p> Thanks for being patient with us!  <br> <br> <br> <br> </p>
+    <p>
+        Thanks for being patient with us! <br><br><br><br>
+    </p>
 </div>
