--- a/SimpleBlazor/Components/_Imports.razor
+++ b/SimpleBlazor/Components/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using SimpleBlazor
 @using SimpleBlazor.Components
+@using SimpleRuleBlazor.Components.Layout
+@using SimpleRuleBlazor.Components.Modals
+@using SimpleRuleBlazor.Components.HomePage
