--- a/SimpleBlazor/Components/Pages/Home.razor
+++ b/SimpleBlazor/Components/Pages/Home.razor
@@ -1,20 +1,23 @@
 ﻿@page "/"
 @namespace SimpleRuleBlazor.Components.Layout
+@using SimpleRuleBlazor.Components.HomePage
+@using SimpleRuleBlazor.Components.Modals
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
 
 
 
-<WelcomeBanner/>
+<WelcomeBanner />
 
-<MainContentSelector/>
+<MainContentSelector />
 
-<UsersPreferLightPhone/>
+<UsersPreferLightPhone />
 
-<TheDisconnectMovement/>
+<TheDisconnectMovement />
 
-<UserReviews/>
+<UserReviews />
 
 <EndingFreeTrialBanner/>
 
